# Ecommerce-mart

./: Readme.md
product-mart/: .env  pyproject.toml
product-mart/product_mart/: main.py
product-mart/product_mart/models/: products.py
