[tool.poetry]
name = "product-mart"
version = "0.1.0"
description = ""
authors = ["sameedchhipa24 <sameedchhipa24@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
sqlmodel = "^0.0.18"
uvicorn = "^0.30.0"
psycopg2 = "^2.9.9"
requests = "^2.32.3"
schedule = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
